feat(back): basic security configuration with jwt token generation